position relative on home elements. should fix flickering on mob/ipad

--- a/wp-content/themes/indigoRiver/css/stylesheet.css
+++ b/wp-content/themes/indigoRiver/css/stylesheet.css
@@ -1102,6 +1102,14 @@ header {
 
 /* ========== Homepage ==========*/
 
+#homeSelectServices {
+	position: relative;
+}
+
+#homeValues {
+	position: relative;
+}
+
 .cd-headline {
     padding-left: 0%;
     margin: 0;
